Renamed main file to index

--- a/lab1/polls.html
+++ b/lab1/polls.html
@@ -17,7 +17,7 @@
           <li class="nav-item"><a href="./sign_in.html" class="nav-link text-white px-2">Вхід</a></li>
           <li class="nav-item"><a href="./profile.html" class="nav-link text-white px-2">Профіль</a></li>
           <li class="nav-item"><a href="./about.html" class="nav-link text-white px-2">Про додаток</a></li>
-          <li class="nav-item"><a href="./create_poll.html" class="nav-link text-white px-2">Нове опитування</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link text-white px-2">Нове опитування</a></li>
           <li class="nav-item"><a href="./polls.html" class="nav-link text-white px-2">Перегляд Опитувань</a></li>
         </ul>
       </nav>
